--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,7 +32,7 @@ jobs:
       - name: Build
         run: npm run build
 
-      - name: SPA fallback (copy index.html to 404.html)
+      - name: SPA fallback
         run: cp dist/index.html dist/404.html
 
       - name: Upload artifact
